# nene

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  compile_flags.txt  gen-docs.lua  genbindings.sh  nene.nelua  nldoc.lua  tlconfig.lua
bindgen/: ast-reader.lua  ast_common.tl  ast_reader.tl  dependencies.tl  generate.lua  generate_carp.tl  generate_nelua.lua  generate_nelua.tl  generator.tl  node.tl  template.lua  typed.lua  utils.lua  utils.tl
bindgen/ast/: ast.tl  comment.tl  dependency.tl  enum.tl  func.tl  header.tl  init.tl  module.tl  op.tl  struct.tl  symbol.tl  type.tl
bindgen/data/: animation.lua  animation.tl  collision.lua  collision.tl  color.lua  color.tl  core.lua  core.tl  font.lua  font.tl  intersections.lua  intersections.tl  texture.lua  texture.tl  texture_atlas.lua  texture_atlas.tl  tilemap.lua  tilemap.tl
bindgen/data/audio/: music.lua  music.tl  sound.lua  sound.tl
bindgen/data/math/: grid.lua  grid.tl  rect.lua  rect.tl  rectf.lua  rectf.tl  segment.lua  segment.tl  shape.lua  shape.tl  vec2.lua  vec2.tl  vec2i.lua  vec2i.tl
bindgen/generators/: carp.tl  nelua.lua  nelua.tl
bindgen/tools/: fun.tl  utils.tl
bindings/carp/nene/: animation.carp  collision.carp  color.carp  core.carp  font.carp  intersections.carp  texture.carp  texture_atlas.carp  tilemap.carp
bindings/carp/nene/audio/: music.carp  sound.carp
bindings/carp/nene/math/: grid.carp  rect.carp  rectf.carp  segment.carp  shape.carp  vec2.carp  vec2i.carp
bindings/carp/nene/sdl/: sdl2.carp  sdl2_image.carp  sdl2_mixer.carp  sdl2_ttf.carp
bindings/nelua/nene/: animation.nelua  collision.nelua  color.nelua  core.nelua  font.nelua  intersections.nelua  texture.nelua  texture_atlas.nelua  tilemap.nelua
bindings/nelua/nene/audio/: music.nelua  sound.nelua
bindings/nelua/nene/math/: grid.nelua  rect.nelua  rectf.nelua  segment.nelua  shape.nelua  vec2.nelua  vec2i.nelua
bindings/nelua/nene/raw/: sdl2.nelua  sdl2_image.nelua  sdl2_mixer.nelua  sdl2_ttf.nelua
docs/: animation.md  audio.md  camera.md  color.md  colors.md  core.md  core_state.md  font.md  gamepad.md  img_wrapper.md  init.md  macros.md  main_state.md  math.md  mix_wrapper.md  scancode.md  sdl2.md  sdl2_image.md  sdl2_mixer.md  sdl2_ttf.md  sdl_wrapper.md  spritesheet.md  text_texture.md  texture.md  texture_atlas.md  tilemap.md  tileset.md  ttf_wrapper.md
docs/audio/: init.md  music.md  sound.md
docs/math/: grid.md  init.md  rect.md  rectf.md  rectn.md  segment.md  vec2.md  vec2i.md  vec2n.md
docs/raw/: sdl2.md  sdl2_image.md  sdl2_mixer.md  sdl2_ttf.md
docs/wrappers/: img.md  mix.md  sdl.md  ttf.md
examples/: camera.nelua  game_controller.nelua  pong.nelua  rects.nelua  render_clip.nelua  segments_intersection.nelua  sound_and_music.nelua  sprite_animation.nelua  texture_atlases.nelua  tilemap.nelua  tilemaps.nelua  tilesets.nelua  web.nelua
examples/c/: CMakeLists.txt  collisions.c  flappy_circle.c
examples/carp/: minimal.carp  reflected_pong.carp
examples/nelua/: .neluacfg.lua  camera.nelua  game_controller.nelua  pong.nelua  render_clip.nelua  segments_intersection.nelua  sound_and_music.nelua  sprite_animation.nelua  texture_atlases.nelua  tilemaps.nelua
include/nene/: animation.h  collision.h  color.h  config.h  core.h  font.h  intersections.h  nene.h  texture.h  texture_atlas.h  tilemap.h
include/nene/audio/: music.h  sound.h
include/nene/impl/: font.h  texture.h  utils.h
include/nene/impl/audio/: music.h  sound.h
include/nene/impl/math/: rect.h  rectf.h
include/nene/math/: grid.h  rect.h  rectf.h  segment.h  shape.h  vec2.h  vec2i.h
nene/: _animation.nelua  _init.nelua  _texture_atlas.nelua  _tilemap.nelua  animation.nelua  audio.nelua  camera.nelua  color.nelua  colors.nelua  core.nelua  core_state.nelua  font.nelua  gamepad.nelua  img_wrapper.nelua  init.nelua  macros.nelua  main_state.nelua  math.nelua  mix_wrapper.nelua  options.lua  scancode.nelua  sdl2.nelua  sdl2_image.nelua  sdl2_mixer.nelua  sdl2_ttf.nelua  sdl_wrapper.nelua  spritesheet.nelua  text_texture.nelua  texture.nelua  texture_atlas.nelua  tilemap.nelua  tileset.nelua  ttf_wrapper.nelua
nene/audio/: init.nelua  music.nelua  sound.nelua
nene/math/: _grid.nelua  _rect.nelua  _segment.nelua  _vec2.nelua  _vec2i.nelua  grid.nelua  init.nelua  rect.nelua  rectf.nelua  rectn.nelua  rects.nelua  segment.nelua  vec2.nelua  vec2i.nelua  vec2n.nelua
nene/raw/: sdl2.nelua  sdl2_image.nelua  sdl2_mixer.nelua  sdl2_ttf.nelua
nene/wrappers/: img.nelua  mix.nelua  sdl.nelua  ttf.nelua
src/: CMakeLists.txt  animation.c  collision.c  color.c  core.c  font.c  intersections.c  texture.c  texture_atlas.c  tilemap.c
src/audio/: music.c  sound.c
src/impl/: font.c  texture.c  utils.c
src/impl/audio/: music.c  sound.c
src/impl/math/: rect.c  rectf.c
src/math/: grid.c  rect.c  rectf.c  segment.c  shape.c  vec2.c  vec2i.c
